--- a/package.json
+++ b/package.json
@@ -19,15 +19,18 @@
     "@emotion/react": "^11.10.0",
     "@emotion/server": "^11.10.0",
     "@emotion/styled": "^11.10.0",
-    "next": "^12.2.5",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "next": "12.1.1",
+    "nprogress": "^0.2.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "usehooks-ts": "^2.6.0"
   },
   "devDependencies": {
     "@emotion/babel-plugin": "^11.10.2",
-    "@types/node": "^18.7.11",
-    "@types/react": "^18.0.17",
-    "@types/react-dom": "^18.0.6",
+    "@types/node": "17.0.23",
+    "@types/nprogress": "^0.2.0",
+    "@types/react": "17.0.43",
+    "@types/react-dom": "17.0.14",
     "autoprefixer": "^10.4.8",
     "babel-plugin-macros": "^3.1.0",
     "eslint": "^8.22.0",
