Integrate hygraph cms. Add work page cards

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,6 +25,10 @@ jobs:
           npm i
           npm run build
           npm run export
+        env:
+          NEXT_PUBLIC_HYGRAPH_URL: ${{ secrets.HYGRAPH_URL }}
+        env:
+          NEXT_PUBLIC_HYGRAPH_TOKEN: ${{ secrets.HYGRAPH_TOKEN }}
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
