--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "@emotion/react": "^11.10.0",
     "@emotion/server": "^11.10.0",
     "@emotion/styled": "^11.10.0",
+    "@react-spring/web": "^9.5.2",
     "graphql": "^16.6.0",
     "graphql-request": "^5.0.0",
     "next": "12.1.1",
     "nprogress": "^0.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "swiper": "8.0.2",
     "usehooks-ts": "^2.6.0"
   },
   "devDependencies": {
