--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "nprogress": "^0.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-image-lightbox": "^5.1.4",
     "swiper": "8.0.2",
     "usehooks-ts": "^2.6.0"
   },
